kustomize/overlays/dev/backend-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend
          image: atkaridarshan04/bookstore-backend:v2  # Dev-specific image
