kustomize/overlays/dev/frontend-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: frontend
          image: atkaridarshan04/bookstore-frontend:v1  # Dev-specific image
